RESOLVED FIXED212988
Logging and tree dumping crash fix
https://bugs.webkit.org/show_bug.cgi?id=212988
Summary Logging and tree dumping crash fix
Simon Fraser (smfr)
Reported 2020-06-09 13:37:39 PDT
Logging and tree dumping crash fix
Attachments
Patch (2.55 KB, patch)
2020-06-09 13:38 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-06-09 13:38:52 PDT
EWS
Comment 2 2020-06-09 16:32:10 PDT
Committed r262825: <https://trac.webkit.org/changeset/262825> All reviewed patches have been landed. Closing bug and clearing flags on attachment 401467 [details].
Radar WebKit Bug Importer
Comment 3 2020-06-09 16:33:15 PDT
Note You need to log in before you can comment on or make changes to this bug.