Logging and tree dumping crash fix https://bugs.webkit.org/show_bug.cgi?id=212988

Reviewed by Zalan Bujtas.

Add scrolling logging to RenderLayer::requestScrollPositionUpdate().

Null-check the scrollerImp in ScrollbarThemeMac::isLayoutDirectionRTL, because this is
called from renderTreeAsText() which can be invoked from the debugger, and should not crash.

* platform/mac/ScrollbarThemeMac.mm:
(WebCore::ScrollbarThemeMac::isLayoutDirectionRTL):
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::requestScrollPositionUpdate):


Canonical link: https://commits.webkit.org/225795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262825 268f45cc-cd09-0410-ab3c-d52691b4dbfc